# PygameArkanoid

./: .gitignore  Arkanoid_v1.6.1_Setup.wixpdb  Arkanoid_v1.6.2_Setup.wixpdb  INSTALLER_GUIDE.md  LICENSE.txt  PyGameBall.py  README.md  changelog.md  compile_installer.bat  create_icon.py  create_installer.iss  create_msi.py  highscores.json  highscores.py  implementation_report.md  interface_improvements_report.md  pyproject.toml  release.py  settings.py  setup.py
docs/: README_RELEASE.md  README_RELEASE.txt
game_resources/: settings.json  settings.py
scripts/: Arkanoid_v1.6.5.exe.spec  build_exe.py  build_msi.py  build_spec.py  create_icon.py  create_installer.iss  create_msi.py  release.py
tests/: README.md  __init__.py  test_display_highscores.py  test_interface_improvements.py  test_interface_simple.py  test_refactoring.py  test_strict_10_limit.py
wix_build/: Product.wxs  icon.wxi
