[tool.poetry]
name = "arkanoid-game"
"1.6.2"
description = "Игра Арканоид"
authors = ["Developer <dadbarn@gmail.com>"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.5.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"